Created main navigation.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,7 +8,10 @@
 @import './layout/header';
 
 @import './component/forms/search-box';
+
 @import './component/navigations/top-nav';
+@import './component/navigations/main-nav';
+
 @import './component/carts/shopping-cart';
 
 /* Bootstrap scss */
