--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,12 +7,17 @@
 @import './layout/main';
 @import './layout/header';
 
+@import './component/services';
+
 @import './component/forms/search-box';
 
 @import './component/navigations/top-nav';
 @import './component/navigations/main-nav';
 
 @import './component/carts/shopping-cart';
+
+/* Alice carousel */
+@import 'react-alice-carousel/lib/scss/alice-carousel.scss';
 
 /* Bootstrap scss */
 @import '~bootstrap/scss/functions';
