--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,6 +9,7 @@
 @import './layout/section';
 
 @import './component/services';
+@import './component/card';
 
 @import './component/forms/search-box';
 
