--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -18,6 +18,8 @@
 
 @import './component/carts/shopping-cart';
 
+@import './component/slides/carousel';
+
 /* Alice carousel */
 @import 'react-alice-carousel/lib/scss/alice-carousel.scss';
 
