--- a/clinet/src/scss/styles.scss
+++ b/clinet/src/scss/styles.scss
@@ -13,6 +13,8 @@
 @import './component/buttons';
 
 @import './component/forms/search-box';
+@import './component/forms/auth-form';
+@import './component/forms/input';
 
 @import './component/navigations/top-nav';
 @import './component/navigations/main-nav';
