--- a/clinet/src/scss/styles.scss
+++ b/clinet/src/scss/styles.scss
@@ -7,6 +7,7 @@
 @import './layout/main';
 @import './layout/header';
 @import './layout/section';
+@import './layout/loading-spinner';
 
 @import './component/services';
 @import './component/card';
