Render product list

--- a/clinet/src/scss/styles.scss
+++ b/clinet/src/scss/styles.scss
@@ -25,6 +25,8 @@
 @import './component/slides/carousel';
 @import './component/slides/image-slider';
 
+@import './component/products/product-list';
+
 /* Alice carousel */
 @import 'react-alice-carousel/lib/scss/alice-carousel.scss';
 
