--- a/clinet/src/scss/styles.scss
+++ b/clinet/src/scss/styles.scss
@@ -38,3 +38,4 @@
 @import '~bootstrap/scss/grid';
 @import '~bootstrap/scss/utilities/display';
 @import '~bootstrap/scss/utilities/flex';
+@import '~bootstrap/scss/utilities/spacing';
