Create sidebar with sidenav and some filters
Create a sidebar containing a side navigation to navigate between
categories of products and filters to filter products based
on different parameters (like: price, size, color, etc).

--- a/clinet/src/scss/styles.scss
+++ b/clinet/src/scss/styles.scss
@@ -8,6 +8,7 @@
 @import './layout/header';
 @import './layout/section';
 @import './layout/loading-spinner';
+@import './layout/sidebar';
 
 @import './component/services';
 @import './component/card';
@@ -19,6 +20,7 @@
 
 @import './component/navigations/top-nav';
 @import './component/navigations/main-nav';
+@import './component/navigations/side-nav';
 
 @import './component/carts/shopping-cart';
 
@@ -26,6 +28,7 @@
 @import './component/slides/image-slider';
 
 @import './component/products/product-list';
+@import './component/products/product-filters';
 
 /* Alice carousel */
 @import 'react-alice-carousel/lib/scss/alice-carousel.scss';
