--- a/clinet/src/scss/styles.scss
+++ b/clinet/src/scss/styles.scss
@@ -10,9 +10,13 @@
 @import './layout/loading-spinner';
 @import './layout/sidebar';
 
+@import './pages/pages';
+@import './pages/product-details';
+
 @import './component/services';
 @import './component/card';
 @import './component/buttons';
+@import './component/accordion';
 
 @import './component/forms/search-box';
 @import './component/forms/auth-form';
