Create button toggle amount of product in cart

--- a/clinet/src/scss/styles.scss
+++ b/clinet/src/scss/styles.scss
@@ -34,6 +34,8 @@
 @import './component/products/product-list';
 @import './component/products/product-filters';
 
+@import './component/cart/cart-amount-toggler';
+
 /* Alice carousel */
 @import 'react-alice-carousel/lib/scss/alice-carousel.scss';
 
