--- a/clinet/src/scss/pages/_product-details.scss
+++ b/clinet/src/scss/pages/_product-details.scss
@@ -60,4 +60,12 @@
       color: $black;
     }
   }
+
+  &__amount {
+    text-transform: uppercase;
+    display: grid;
+    grid-template-columns: 5rem 1fr;
+    column-gap: 2rem;
+    align-items: center;
+  }
 }
