--- a/clinet/src/scss/component/_buttons.scss
+++ b/clinet/src/scss/component/_buttons.scss
@@ -4,6 +4,7 @@
   border-radius: 8rem;
   border: none;
   cursor: pointer;
+  text-align: center;
 
   &__primary {
     color: $black;
@@ -12,6 +13,20 @@
     &:hover {
       background-color: lighten($main-color, 15%);
     }
+  }
+
+  &__secondary {
+    color: $black;
+    background-color: $secondary-color;
+
+    &:hover {
+      background-color: lighten($secondary-color, 15%);
+    }
+  }
+
+  &__block {
+    display: block;
+    width: 100%;
   }
 
   &__link {
