--- a/clinet/src/scss/styles.scss
+++ b/clinet/src/scss/styles.scss
@@ -34,6 +34,7 @@
 @import './component/products/product-list';
 @import './component/products/product-filters';
 
+@import './component/cart/cart';
 @import './component/cart/cart-amount-toggler';
 
 /* Alice carousel */
