Create checkout page
- Create shipping address form to collect shipping info.
- Create mini cart to display cart items.
- Create radio buttons to choose payment options (paypal/cod).

--- a/clinet/src/scss/styles.scss
+++ b/clinet/src/scss/styles.scss
@@ -36,6 +36,9 @@
 
 @import './component/cart/cart';
 @import './component/cart/cart-amount-toggler';
+@import './component/cart/mini-cart';
+
+@import './component/checkout/checkout';
 
 /* Alice carousel */
 @import 'react-alice-carousel/lib/scss/alice-carousel.scss';
