--- a/clinet/src/scss/component/navigations/_top-nav.scss
+++ b/clinet/src/scss/component/navigations/_top-nav.scss
@@ -1,13 +1,7 @@
 .top-nav {
   display: flex;
 
-  &__item + &__item {
+  .nav__item + .nav__item {
     margin-left: $text-xlarge;
-  }
-
-  &__item {
-    span {
-      margin-left: 1rem;
-    }
   }
 }
