--- a/clinet/src/scss/styles.scss
+++ b/clinet/src/scss/styles.scss
@@ -17,6 +17,7 @@
 @import './component/card';
 @import './component/buttons';
 @import './component/accordion';
+@import './component/dropdown';
 
 @import './component/forms/search-box';
 @import './component/forms/auth-form';
