--- a/clinet/src/scss/styles.scss
+++ b/clinet/src/scss/styles.scss
@@ -4,7 +4,6 @@
 
 @import './base/base';
 
-@import './layout/main';
 @import './layout/header';
 @import './layout/section';
 @import './layout/loading-spinner';
@@ -12,6 +11,7 @@
 
 @import './pages/pages';
 @import './pages/product-details';
+@import './pages/_confirm-email';
 
 @import './component/services';
 @import './component/card';
