Change width and set color to black

--- a/clinet/src/scss/component/_dropdown.scss
+++ b/clinet/src/scss/component/_dropdown.scss
@@ -16,7 +16,8 @@
   }
 
   &__content {
-    width: 25rem;
+    color: $black;
+    width: 20rem;
     position: absolute;
     top: 6.4rem;
     left: 0;
