--- a/clinet/src/scss/styles.scss
+++ b/clinet/src/scss/styles.scss
@@ -26,6 +26,7 @@
 @import './component/navigations/top-nav';
 @import './component/navigations/main-nav';
 @import './component/navigations/side-nav';
+@import './component/navigations/breadcrumbs';
 
 @import './component/carts/shopping-cart';
 
