--- a/clinet/src/scss/styles.scss
+++ b/clinet/src/scss/styles.scss
@@ -7,6 +7,7 @@
 @import './layout/header';
 @import './layout/section';
 @import './layout/loading-spinner';
+@import './layout/navbar';
 @import './layout/sidebar';
 
 @import './pages/pages';
@@ -27,6 +28,7 @@
 @import './component/navigations/main-nav';
 @import './component/navigations/side-nav';
 @import './component/navigations/breadcrumbs';
+@import './component/navigations/drawer';
 
 @import './component/carts/shopping-cart';
 
