--- a/clinet/src/scss/styles.scss
+++ b/clinet/src/scss/styles.scss
@@ -5,6 +5,7 @@
 @import './base/base';
 
 @import './layout/header';
+@import './layout/footer';
 @import './layout/section';
 @import './layout/loading-spinner';
 @import './layout/navbar';
